// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem> when the pathname does not match the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="font-mono"
  >
    <a
      class="text-[#ff3366]"
      href="/back"
    >
      Go Back
    </a>
  </li>
</DocumentFragment>
`;

exports[`<DropdownItem> when the pathname matches the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="font-mono"
  >
    <p
      class="text-muted"
    >
      Go Back
    </p>
  </li>
</DocumentFragment>
`;
